Bug 351078 - Irritation with Dividend reinvest action
Summary: Irritation with Dividend reinvest action
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-08 06:50 UTC by Corey
Modified: 2018-09-02 07:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Corey 2015-08-08 06:50:46 UTC
Reinvest Dividend

It is not possible to Enter (post) a Dividend Reinvestment Transaction unless an amount is entered in the Fees Category.

One of the reasons for setting up an automatic Dividend Reinvestment Plan is to avoid brokerage and other fees, so please allow a zero amount here – I currently add 1 cent, which allows the transaction to be saved (Entered).

Also on same topic when a dividend is reinvested there is invariably some cash left over which I credit to a Cash C/Fwd  Account. Only problem is next time I reinvest a dividend I don’t know the exact amount of Cash to  Bring Forward. So it would be nice if that cash could be linked to a specific Stock or Investment and be shown when a new Dividend Reinvest transaction was initiated.



Reproducible: Always
Comment 1 wojnilowicz 2017-08-02 15:54:43 UTC
Git commit 7f6ce06ab35a4438e57d09063ddbe2bc575f02e9 by Łukasz Wojniłowicz.
Committed on 02/08/2017 at 15:52.
Pushed by wojnilowicz into branch 'master'.

Don't require fees for reinvest dividend action
FIXED-IN:5.0
Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>

M  +2    -6    kmymoney/dialogs/investactivities.cpp

https://commits.kde.org/kmymoney/7f6ce06ab35a4438e57d09063ddbe2bc575f02e9
Comment 2 Jack 2017-08-02 16:33:34 UTC
I'm sorry I never noticed this bug before, but I have done lots of Dividend Reinvestments for many years, and never had to enter any Fees.  This is both manually entered, and transactions imported as Dividend which I manually change to Dividend Reinvest.  In any case, I hope the change simply makes Fees not required, as opposed to preventing them from being present.  I don't know how often there actually are fees associated with a dividend reinvestment, but not allowing them would then require a separate transaction in the brokerage account, which would then not be linked to the actual investment transaction that that generated the fee.

to Corey - I don't understand your last paragraph.  If there is cash left over, then I would think it would go to the associated Brokerage account.  Are you saying that in your case, that extra cash is tracked by your broker separately from the main cash balance, and is actually relevant to future Dividend Reinvestments?